added fancy math

--- a/TestModule1.ipynb
+++ b/TestModule1.ipynb
@@ -17,6 +17,25 @@
    "source": [
     "print('Dusting off the cobwebs')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "e1a3dbfc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "one = 1\n",
+    "print(one+one)"
+   ]
   }
  ],
  "metadata": {
